--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+.img-container {
+  width: 100%;
+  height: 70vh;
+  background-image: url('./Assets/Pizza.jpg');
+}
